creusot/tests/should_fail/bug/771.rs
extern crate creusot_contracts;
use creusot_contracts::*;

#[predicate]
fn not_boolean() -> () {}

#[predicate]
fn not_boolean2() -> u32 {}

#[predicate]
fn not_boolean3() {}
